Added large file to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 notebooks/old_bnb_forecaster_ML.ipynb
 notebooks/old_bnb_forecaster_ML.ipynb
 notebooks/old_bnb_forecaster_ML.ipynb
+notebooks/old_bnb_forecaster_ML.ipynb
